# UEEH

./: .gitignore  AGENTS.md  README.md  README_BLOQUE_1.md  README_BLOQUE_10.md  README_BLOQUE_11.md  README_BLOQUE_2.md  README_BLOQUE_3.md  README_BLOQUE_4.md  README_BLOQUE_5.md  README_BLOQUE_6.md  README_BLOQUE_7.md  README_BLOQUE_8.md  README_BLOQUE_9.md  SISTEMA REGISTRO DE NOTAS 2025 2026.xlsm  UEEH.spec  main.py  pyproject.toml  requirements.txt  setup_config.iss  tabla_calificaciones.py  ventana_principal.py
bas/: Cargar_Logo.bas  MostrarF_M1.bas  MostrarF_M10.bas  MostrarF_M11.bas  MostrarF_M12.bas  MostrarF_M13.bas  MostrarF_M2.bas  MostrarF_M3.bas  MostrarF_M4.bas  MostrarF_M5.bas  MostrarF_M6.bas  MostrarF_M7.bas  MostrarF_M8.bas  MostrarF_M9.bas  OcultarF_M1.bas  OcultarF_M10.bas  OcultarF_M11.bas  OcultarF_M12.bas  OcultarF_M13.bas  OcultarF_M2.bas  OcultarF_M3.bas  OcultarF_M4.bas  OcultarF_M5.bas  OcultarF_M6.bas  OcultarF_M7.bas  OcultarF_M8.bas  OcultarF_M9.bas  README.md
data/: sistema_notas.db
docs/: arquitectura_inicial.md  auditoria_frontend_backend.md  reglas_negocio.md
scripts/: generar_base_pristina.py  limpiar_base_pruebas.py  simular_actualizacion.py
src/: app.py  version.py
tests/: test_academic_summary_service.py  test_academic_summary_view.py  test_animacion_lectura_view.py  test_app_startup_v4.py  test_application_services.py  test_attendance_view.py  test_backup_service.py  test_calculations.py  test_classroom_accompaniment_service.py  test_classroom_accompaniment_view.py  test_dashboard_view.py  test_enrollment_service.py  (+28 more)
(+89 files in other folders)
